<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱理不理</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="please_name">请输入手机号码</string>
    <string name="please_correct_phone">请输入正确手机号码</string>
    <string name="login_pwd">请输入您的密码</string>
    <string name="login">登  录</string>
    <string name="my_login">登录</string>

    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="find_password">注   册</string>
    <string name="my_register">注册</string>
    <string name="phone_register">找回密码</string>
    <string name="weixin_login">微信登录</string>
    <string name="other_login">第三方账号登录</string>
    <string name="please_password">请输入密码</string>
    <string name="verification_code">请输入验证码</string>
    <string name="send_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="wrong_name">用户名未匹配</string>
    <string name="wrong_password">密码未匹配</string>
    <string name="please_validation">请输入验证码</string>
    <string name="tip_please_input_username">请输入手机号</string>
    <string name="error_validation">验证码不匹配</string>
    <string name="commit">提   交</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="confirm_new_pwd">确认密码</string>
    <string name="rgt_instruct">点击注册，表示同意</string>
    <string name="mylaw_privacy">《法律说明与隐私政策》</string>
 
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="copy_success">复制成功</string>
    <string name="quxiao_reason">取消原因：</string>

    <!-- 底部 -->
    <string name="main_tab_home">规划</string>
    <string name="main_tab_focus">易选基</string>
    <string name="main_tab_shopping">跟踪</string>
    <string name="main_tab_my">我的</string>



     <!--  我的-->
    <string name="my_shopping_cart">我的购物车</string>
    <string name="my_collect">我的收藏</string>
    <!-- 二维码 -->
    <string name="qr_scan_tips">将二维码/条码放入框内，即可自动扫描</string>

    <!-- 分享 -->
    <string name="share_to">分享到</string>
    <string name="platform_qq">QQ</string>
    <string name="platform_copy_link">QQ空间</string>
    <string name="platform_more_option">更多</string>
    <string name="platform_sina">微博</string>
    <string name="platform_weichat">微信</string>
    <string name="platform_weichat_circle">朋友圈</string>
    <!-- 版本更新 -->
    <string name="down_state">正在下载：%s</string>

    <!-- Error View -->
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>

    <!-- search -->
    <string name="search_hint">搜搜有惊喜!</string>
    
     <!--  -->
     
     
    <string name="pushmsg_center_no_more_msg">已经到底啦</string>
    <string name="pushmsg_center_pull_up_text">松开加载更多</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
        <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
     

</resources>