<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbg"
    android:orientation="vertical">


    <com.anyin.ailibuli.custom.TitleBarView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.anyin.ailibuli.custom.TitleBarView>

    <com.anyin.ailibuli.custom.KJScrollView
        android:id="@+id/register_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/register_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/my_top_background" />

            <LinearLayout
                android:id="@+id/register_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_img"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/login_layout_editor_bg"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:background="@drawable/number"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/register_input_name"
                        style="@style/loginEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/please_name"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:singleLine="true"
                        android:textColor="@color/ailibuli_black"
                        android:textSize="@dimen/edit_text_size_commen" />

                    <TextView
                        android:id="@+id/phone_delecte_all"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="@dimen/space_12"
                        android:background="@drawable/ic_search_clear"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ssss"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/space_20"
                    android:background="@drawable/login_layout_editor_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:background="@drawable/password"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/register_input_password"
                        style="@style/loginEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="@string/login_pwd"
                        android:inputType="textPassword"
                        android:singleLine="true"

                        android:textColor="@color/ailibuli_black"
                        android:textSize="@dimen/edit_text_size_commen" />

                    <TextView
                        android:id="@+id/pwd_delecte_all"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="@dimen/space_12"
                        android:background="@drawable/ic_search_clear"
                        android:visibility="gone" />
                </LinearLayout>


                <com.zhy.autolayout.AutoRelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/space_20"
                    android:background="@drawable/login_layout_editor_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="14dp"
                        android:background="@drawable/password"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/register_input_yanzhenma"
                        style="@style/loginEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="10dp"

                        android:background="@null"
                        android:hint="请输入验证码"

                        />


                    <TextView
                        android:id="@+id/reginster_get_yanzhengma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/space_15"
                        android:padding="5dp"
                        android:text="获取验证码"
                        android:textColor="@color/ailibuli_black"
                        android:textSize="@dimen/text_size_sp_18" />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="90px"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginRight="@dimen/space_15"
                        android:layout_toLeftOf="@id/chgpass_get_yanzhengma"
                        android:background="@color/appbg"></View>


                </com.zhy.autolayout.AutoRelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_alignLeft="@+id/register_edit_layout"
                android:layout_alignRight="@+id/register_edit_layout"
                android:layout_below="@+id/register_edit_layout"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_layout_bnt_white"
                android:text="注册"

                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <RelativeLayout
                android:id="@+id/register_passfind_and_phoneregister"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/register_edit_layout"
                android:layout_alignRight="@+id/register_edit_layout"
                android:layout_below="@+id/register_btn"
                android:layout_marginTop="13dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/registered_user"
                    style="@style/loginEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:enabled="true"
                    android:padding="2dp"
                    android:text="@string/find_password"
                    android:textColor="@color/ailibuli_base_color"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/register_login"
                    style="@style/loginEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="2dp"
                    android:text="@string/login"
                    android:textColor="@color/ailibuli_base_color"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linean_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_passfind_and_phoneregister"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#805C4E"
                    android:gravity="center" />

                <TextView
                    style="@style/loginEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/other_login"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="#805C4E"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linean_line"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/img_weixin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/login_wx" />

                <ImageView
                    android:id="@+id/img_xinlang"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/login_xl" />

                <ImageView
                    android:id="@+id/img_qq"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:src="@drawable/login_qq" />
            </LinearLayout>
        </RelativeLayout>
    </com.anyin.ailibuli.custom.KJScrollView>

</LinearLayout>